# UrbanDishAnalyzer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  business_map.html  extract_restaurants.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_script.py
.github/workflows/: python-app.yml
src/: __init__.py  main.py
src/examples/: README.md  __init__.py  basic_analysis.py  geographical_analysis.py  multilingual_analysis.py  taste_profile_demo.py  tucson_analysis.py  yelp_analysis.py
src/profiling/: __init__.py  cli.py  config.py  logging.py  utils.py
src/profiling/analysis/taste_profile/: __init__.py  analyzer.py  constants.py  extraction.py  profile.py
src/profiling/analyzer/: aspect_extractor.py
src/profiling/constants/: __init__.py  aspects.py  languages.py  thresholds.py
src/profiling/core/: __init__.py  analyzer.py  profile.py
src/profiling/extraction/: __init__.py  extractor.py  sentiment.py
src/profiling/geo/: clustering.py  hotspots.py
src/profiling/scripts/: install_models.py
src/profiling/visualization/: maps.py  reports.py
tests/: conftest.py  test_analyzer.py  test_data_loader.py  test_profile.py
tests/profiling/extraction/: test_extractor.py
tests/profiling/geo/: test_clustering.py  test_hotspots.py
tests/profiling/visualization/: test_maps.py  test_reports.py
